[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosemary"
version = "1.0.0"
description = "Rosemary is a CLI to be able to work on UVLHub development more easily."
requires-python = ">=3.13"
dependencies = [
    "click",
    "python-dotenv",
]

[project.scripts]
rosemary = "rosemary.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
